--- a/src/madis/configuration/sensors/bme280.yaml
+++ b/src/madis/configuration/sensors/bme280.yaml
@@ -1,3 +1,3 @@
 configuration-name: environmental
-driver-module: madis.sensors.bme280
+driver-module: madis.sensors.sensor_bme280
 driver-class: BME280Sensor
