--- a/src/madis/configuration/sensors/bn880.yaml
+++ b/src/madis/configuration/sensors/bn880.yaml
@@ -1,3 +1,3 @@
 configuration-name: environmental
-driver-module: madis.sensors.BN880Sensor
+driver-module: madis.sensors.sensor_bn880
 driver-class: BN880Sensor
