--- a/src/madis/configuration/mad-configuration.yaml
+++ b/src/madis/configuration/mad-configuration.yaml
@@ -27,6 +27,7 @@ sensors-configuration:
 #-------------------------------------------------------------------------------------
 
 # ROS Node publisher <---> association with sensors
+# Ros rate is in Hz (1 -> second, 2 -> half second)
 ros-nodes:
   role_navigation:
     sensor-name: gps
@@ -40,7 +41,7 @@ ros-nodes:
     sensor-name: environmental
     module-name: madis.ros.generic_mad_publisher
     script-name: ../ros/generic_mad_publisher.py
-    ros-rate: 2
+    ros-rate: 4
     ros-node-name: mad_environmental
     ros-topic-name: environment
 
@@ -48,7 +49,7 @@ ros-nodes:
     sensor-name: inclinometer
     module-name: madis.ros.generic_mad_publisher
     script-name: ../ros/generic_mad_publisher.py
-    ros-rate: 2
+    ros-rate: 10
     ros-node-name: mad_stabilizer
     ros-topic-name: stability
 
@@ -56,6 +57,6 @@ ros-nodes:
     sensor-name: sonar
     module-name: madis.ros.generic_mad_publisher
     script-name: ../ros/generic_mad_publisher.py
-    ros-rate: 2
+    ros-rate: 3
     ros-node-name: mad_obstacles
     ros-topic-name: obstacle
