minor changes to configuration files

--- a/src/madis/configuration/logger-configuration.yaml
+++ b/src/madis/configuration/logger-configuration.yaml
@@ -9,8 +9,8 @@ handlers:
         class: logging.FileHandler
         filename: "/tmp/mad_log_%Y%m%dT%H%M%S.log"
         formatter: standard
-        level: INFO
+        level: DEBUG
 
 root:
-    level: INFO
+    level: DEBUG
     handlers: [file_handler]
