new configuration files for the new architecture

--- a/src/madis/configuration/sensors/dummy_gps.yaml
+++ b/src/madis/configuration/sensors/dummy_gps.yaml
@@ -1,5 +1,9 @@
 configuration-name: gps
 driver-module: madis.sensors.dummy
 driver-class: DummySensorGPS
+
+# herz
+frequency: 10
+
 serial-port: ~
 baudrate: ~
