--- a/src/madis/configuration/sensors/dummy_temp_pressure.yaml
+++ b/src/madis/configuration/sensors/dummy_temp_pressure.yaml
@@ -1,3 +1,5 @@
 configuration-name: environmental
 driver-module: madis.sensors.dummy
 driver-class: DummySensorTempPressureAltitude
+# herz
+frequency: 10
