--- a/src/madis/configuration/mad-configuration.yaml
+++ b/src/madis/configuration/mad-configuration.yaml
@@ -2,7 +2,7 @@
 # PRELOAD action to do
 # NEED TO IMPLEMENT - NOT NOW because I want to realize flight-controller
 preload:
-  command-to-exec-before: export ROS_MASTER_URI=http://192.168.1.111:11311; roscore
+  command-to-exec-before:
   wait-at-boot: True
   seconds-to-wait: 2
   command-to-exec-after:
@@ -35,7 +35,7 @@ motors-configuration:
   - single-motor-configuration:
       enable: false
       id: 3
-      gpio_pin: 20
+      gpio_pin: 17
       min_value: 1100
       max_value: 1700
       driver-module: madis.core.motors
@@ -44,7 +44,7 @@ motors-configuration:
   - single-motor-configuration:
       enable: false
       id: 4
-      gpio_pin: 20
+      gpio_pin: 18
       min_value: 1100
       max_value: 1700
       driver-module: madis.core.motors
@@ -55,53 +55,20 @@ motors-configuration:
 
 sensors-configuration:
   # Configuration for GPS
-  gps-configuration: sensors/bn880.yaml
+  #gps-configuration: sensors/bn880.yaml
+  gps-configuration: sensors/dummy_gps.yaml
 
   # Configuration for Accelerometer/Gyroscope
-  accelerometer_gyroscope-configuration: sensors/mma845x.yaml
-  #accelerometer_gyroscope-configuration: sensors/dummy_accel_gyro.yaml
+  #accelerometer_gyroscope-configuration: sensors/mma845x.yaml
+  accelerometer_gyroscope-configuration: sensors/dummy_accel_gyro.yaml
 
   # Configuration for Sonar (Obstacle Avoidance)
-  obstacle-avoidance-configuration: sensors/dummy_sonar.yaml
+  #obstacle-avoidance-configuration: sensors/dummy_sonar.yaml
 
   # Configuration for Enviromental sensor
-  environmental-configuration: sensors/bme280.yaml
+  #environmental-configuration: sensors/bme280.yaml
+  environmental-configuration: sensors/dummy_temp_pressure.yaml
 
 #-------------------------------------------------------------------------------------
-
-# ROS Node publisher <---> association with sensors
-# Ros rate is in Hz (1 -> second, 2 -> half second)
-ros-nodes:
-  role_navigation:
-    sensor-name: gps
-    module-name: madis.ros.generic_mad_publisher
-    script-name: ../ros/generic_mad_publisher.py
-    ros-rate: 2
-    ros-node-name: mad_navigator
-    ros-topic-name: navigation
-
-  role_environment:
-    sensor-name: environmental
-    module-name: madis.ros.generic_mad_publisher
-    script-name: ../ros/generic_mad_publisher.py
-    ros-rate: 4
-    ros-node-name: mad_environmental
-    ros-topic-name: environment
-
-  role_stability:
-    sensor-name: inclinometer
-    module-name: madis.ros.generic_mad_publisher
-    script-name: ../ros/generic_mad_publisher.py
-    ros-rate: 10
-    ros-node-name: mad_stabilizer
-    ros-topic-name: stability
-
-  role_obstacles:
-    sensor-name: sonar
-    module-name: madis.ros.generic_mad_publisher
-    script-name: ../ros/generic_mad_publisher.py
-    ros-rate: 3
-    ros-node-name: mad_obstacles
-    ros-topic-name: obstacle
 
 
